--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.activity:activity-ktx:1.2.0-beta02"
+    implementation 'com.github.duanhong169:colorpicker:1.1.6'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+
 }
+
