--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,17 @@ android {
     compileSdkVersion 28
     buildToolsVersion "30.0.2"
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
     defaultConfig {
         applicationId "ru.hatchup.animotio"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -32,11 +40,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.activity:activity-ktx:1.2.0-beta02"
-    implementation 'com.github.duanhong169:colorpicker:1.1.6'
+    implementation "com.github.skydoves:colorpickerview:2.2.2"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
 }
